Archivos clases/Archibox/intro_coleeciones.txt
Python 3.11.2 (tags/v3.11.2:878ead1, Feb  7 2023, 16:38:35) [MSC v.1934 64 bit (AMD64)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> a=[1,2,3,4,5]
>>> type(a)
<class 'list'>
>>> a[1]
2
>>> a[0]
1
>>> a[-1]
5
>>> a[-6]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
IndexError: list index out of range
>>> print(a)
[1, 2, 3, 4, 5]
>>> a+a
[1, 2, 3, 4, 5, 1, 2, 3, 4, 5]
>>> a*3
[1, 2, 3, 4, 5, 1, 2, 3, 4, 5, 1, 2, 3, 4, 5]
>>> 4 in a
True
>>> 6 in a
False
>>> a[:2]
[1, 2]
>>> a[2:4]
[3, 4]
>>> a[4:]
[5]
>>> b=[12, 14, 10, 15, "paco", True, [1, 2, 5]]
>>> b[-1]
[1, 2, 5]
>>> b[-1][2]
5
>>> b[-1][0]
1
>>> matriz = [[1,2],[3,4]]
>>> b[4]
'paco'
>>> matriz[0][0]
1
>>> matriz[0][1]
2
>>> matriz[1][0]
3
>>> matriz[1][1]
4
>>> b[-1]+matriz[0]
[1, 2, 5, 1, 2]
>>> b[-1]
[1, 2, 5]
>>> matriz[0]
[1, 2]
>>> b[-1]+matriz
[1, 2, 5, [1, 2], [3, 4]]
>>>
>>>
>>>
>>>
>>>
>>>
>>>
>>> b
[12, 14, 10, 15, 'paco', True, [1, 2, 5]]
>>> b[2:5]
[10, 15, 'paco']
>>> b[:5]
[12, 14, 10, 15, 'paco']
>>> b[5:]
[True, [1, 2, 5]]
>>> b[5]
True
>>> b[5]="luis"
>>> b
[12, 14, 10, 15, 'paco', 'luis', [1, 2, 5]]
>>>
>>> c = "Hola mundo"
>>>
>>> c
'Hola mundo'
>>> c[:5]
'Hola '
>>> c[:4]
'Hola'
>>> c*2
'Hola mundoHola mundo'
>>> c[5]
'm'
>>> c[5]=M
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'M' is not defined
>>> c[:5]
'Hola '
>>> c[:5]+M+c[6]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'M' is not defined
>>> c[:5]+"M"+c[6]
'Hola Mu'
>>> c[:5]+"M"+c[6:]
'Hola Mundo'
>>>
>>>
>>> a
[1, 2, 3, 4, 5]
>>> mas(a)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'mas' is not defined. Did you mean: 'max'?
>>> max(a)
5
>>> min(a)
1
>>> sum(a)
15
>>> a.append(0)
>>> a
[1, 2, 3, 4, 5, 0]
>>> a.append(0)
>>> a
[1, 2, 3, 4, 5, 0, 0]
>>> sorted(a)
[0, 0, 1, 2, 3, 4, 5]
>>> a
[1, 2, 3, 4, 5, 0, 0]
>>> a.sort()
>>> a
[0, 0, 1, 2, 3, 4, 5]
>>> a.reverse()
>>> a
[5, 4, 3, 2, 1, 0, 0]
>>> a = sorted(a)
>>> a
[0, 0, 1, 2, 3, 4, 5]
>>> a[3]
2
>>> a.pop[a]
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'builtin_function_or_method' object is not subscriptable
>>> a.pop(a)
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
TypeError: 'list' object cannot be interpreted as an integer
>>> a.pop()
5
>>>
>>> a
[0, 0, 1, 2, 3, 4]
>>> a,pop()
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'pop' is not defined. Did you mean: 'pow'?
>>> a.pop()
4
>>> a
[0, 0, 1, 2, 3]
>>> a.insert(2,13)
>>> a
[0, 0, 13, 1, 2, 3]
>>> a.count(0)
2
>>> a.count(11)
0
>>> a.remove(13)
>>> a
[0, 0, 1, 2, 3]
>>> a.remove(0)
>>> a
[0, 1, 2, 3]
>>> a.append(0)
>>> a.remove(0)
>>> a
[1, 2, 3, 0]
>>>
>>>
>>>
>>> caso = input("Ingrese punto")
Ingrese puntoPuNtO
>>> caso
'PuNtO'
>>> caso.lower()
'punto'
>>> caso.upper()
'PUNTO'
>>> if caso.lower()=="punto":
...     print("muy bien")
...
muy bien
>>> c = " punto
  File "<stdin>", line 1
    c = " punto
        ^
SyntaxError: unterminated string literal (detected at line 1)
>>> c=="punto"
False
>>> c.strip()
'Hola mundo'
>>> c=punto
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'punto' is not defined
>>> c= "punto"
>>> c.strip()=="punto"
True
>>>

